force-app/main/default/objects/SetAddressSetting__c/SetAddressSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Email addresses to send emails</description>
    <label>Set Address Setting</label>
</CustomObject>