force-app/main/default/objects/SetAddressSetting__c/fields/DeliveryDefault__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDefault__c</fullName>
    <label>Delivery Default</label>
    <type>Email</type>
</CustomField>