force-app/main/default/objects/SetAddressSetting__c/fields/EmailCDG__c.field-meta.xml
<CustomField>
    <fullName>EmailCDG__c</fullName>
    <label>Email CDG</label>
    <type>Email</type>
</CustomField>