force-app/main/default/objects/SetAddressSetting__c/fields/OtherAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherAddress__c</fullName>
    <label>Other Address</label>
    <type>Email</type>
</CustomField>