force-app/main/default/objects/SetAddressSetting__c/fields/SalesDefault__c.field-meta.xml
<CustomField>
    <fullName>SalesDefault__c</fullName>
    <label>Sales Default</label>
    <type>Email</type>
</CustomField>